@@ -1,3 +1,8 @@
+2015-04-12  Iain Buclaw  <ibuclaw@gdcproject.org>
+
+	* d-codegen.cc(get_object_method): Use OBJ_TYPE_REF to build method
+	callee expressions.
+
 2015-04-11  Johannes Pfau  <johannespfau@gmail.com>
 
 	* d-objfile.cc(setup_symbol_storage): Mark functions without
